# zksnark-java-sdk

./: pom.xml
cpp/: CMakeLists.txt
cpp/src/: LibrustzcashJNIImpl.cpp  LibsodiumJNIImpl.cpp
src/test/java/org/tron/common/zksnark/: HexBin.java  LibrustzcashTest.java  LibsodiumTest.java
